Tweaks - Fixed left alignment - 'Reset' now also covers search text - Updated 'this x has no applications' message to conditionally include ' matching the search term' - Fixed wrap of search box and add app button when width is shrunk

--- a/src/plugins/cloud-foundry/cloud-foundry.scss
+++ b/src/plugins/cloud-foundry/cloud-foundry.scss
@@ -12,7 +12,6 @@
 }
 
 .action-bar {
-  height: $hpe-unit-space * 3;
   line-height: $hpe-unit-space * 3;
   vertical-align: middle;
   margin-top: $hpe-unit-space;
@@ -22,7 +21,7 @@
   &.panel-less {
     margin-top: $hpe-unit-space / 3;
     margin-bottom: $hpe-unit-space / 3;
-    padding-left: 20px;
+    padding-left: 16px;
     padding-right: 16px;
 
     h1 {
